fixed navbar overlapping

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -148,7 +148,7 @@ h1.footer-text{
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover;
-   margin-top: 6em;
+   
   }
 
 .flex-container {
@@ -164,6 +164,7 @@ h1.footer-text{
     flex-direction: column;
     align-items: center;
     margin-bottom: 2em;
+    
 }
 
 .jumbo-nav {
@@ -199,6 +200,9 @@ h1.footer-text{
     font-size:1.2em;
     text-align:left;
     padding-left: 0;
+    float:right;
+    align-self: flex-end;
+    padding-right: 5%;
 }
 
 .nav-icons:hover {
@@ -236,11 +240,12 @@ h1.footer-text{
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     left: 0;
-    top: 0;
+    top: 10%;
     background-color: rgb(0,0,0); /* Black fallback color */
     background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
     overflow-x: hidden; /* Disable horizontal scroll */
     transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+    
   }
   
   /* Position the content inside the overlay */
@@ -336,12 +341,13 @@ div.card {
     box-shadow: 0px 0px 2px 0px #ffffff;
     margin:1em;
     /* width:100% !important; */
-    
-    
+     
     
 }
 
-
+div.card-c{
+    margin-top: 20%;
+}
 
 /* Accordion */
 .accordion {
